welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:46: error: type mismatch;
 found   : Unit
 required: Boolean
      droite()
            ^SnakeBuggle:55: error: type mismatch;
 found   : Unit
 required: Boolean
      gauche()
            ^SnakeBuggle:49: error: type mismatch;
 found   : Unit
 required: Boolean
  }else if(getDirection()==Direction.OUEST){
        ^